# cepAPI

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/consulta_cep_gvolpatolima/: main.py
src/consulta_cpf_gvolpatolima/: main.py
