[project]
name = "cep_consulta_gvolpatolima"
version = "0.0.1"
authors = [
  { name="Gabriel Volpato", email="gvolpatolima@gmail.com" },
]
description = "Pacote de testes com uma função que checa CEP"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gvolpatolima/cepAPI"
"Bug Tracker" = "https://github.com/gvolpatolima/cepAPI/issues"